# react-rust

./: .editorconfig  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml
api/: .env  Cargo.toml  Dockerfile
api/assets/: index.html
api/assets/public/: app.3108d7c7f9131fb0e543.css  common.c28fd93d549032a531d8.js  dashboard.44e99eb2d1e496c38ed6.js  home.7ced78c458657050921b.js  info.8e5923f059ca66ae868e.js  main.5d233f299e3695ad3d51.js  not-found.06b41b0677cb5ef38294.js
api/certs/: cert.pem  key.pem
api/src/: cors.rs  main.rs  routes.rs  ssl.rs
api/src/user/: handlers.rs  model.rs
app/: package.json  webpack.dev.js  webpack.env.js  webpack.prod.js
app/plugins/: inline-style-plugin.js
app/src/: app.js  app.scss  index.html  routes.js
app/src/components/: Body.js
app/src/core/: Body.js  Body.scss  Loader.js
app/src/routing/: Links.scss  SecureRoute.js
app/src/user/: user.actions.js  user.actions.test.js  user.reducers.js  user.reducers.test.js  user.service.js
docs/: PeerCertificates.md
site/: Dockerfile  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
site/src/: app.js  app.tsx  config.ts  index.tsx  routes.js  routes.ts  store.ts
site/src/components/: Body.tsx  Loader.tsx
site/src/css/: base.scss
site/src/middleware/: async.middleware.ts  dev.logger.middleware.test.ts  dev.logger.middleware.ts
site/src/routing/: Links.js  Links.tsx  SecureRoute.tsx  Switch.js  Switch.tsx
site/src/user/: user.actions.js  user.actions.ts  user.reducers.test.ts  user.service.ts  user.slice.test.ts  user.slice.ts
(+6 files in other folders)
