[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid        = { version = "0.8.2", features = ["serde", "v4"] }
actix-web   = { version = "3.3.2", features = ["openssl"] }
actix-files = "0.5.0"
actix-cors  = "0.5.4"
actix-tls   = "2.0.0"
serde_json  = "1.0.66"
env_logger  = "0.9.0"
openssl-sys = "0.9.66"
openssl     = "0.10.36"
futures     = "0.3.16"
dotenv      = "0.15.0"
serde       = "1.0.129"
log         = "0.4.14"

[features]
vendored = ["openssl-sys/vendored"]
