[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid        = { version = "0.8.2", features = ["serde", "v4"] }
actix-web   = { version = "4.0.1", features = ["openssl"] }
serde       = { version = "1.0.136", features = ["derive"] }
openssl     = { version = "0.10.38", features = ["v110"] }
actix-files = "0.6.0"
actix-cors  = "0.6.0"
actix-tls   = "3.0.3"
serde_json  = "1.0.79"
env_logger  = "0.9.0"
openssl-sys = "0.9.72"
dotenv      = "0.15.0"
log         = "0.4.14"

[features]
vendored = ["openssl-sys/vendored"]
